<resources>
    <string name="app_name">car_loan_calculator</string>
    <string name="titile">Car Loan Calculator</string>

    <string name="car_price">Car Price</string>
    <string name="down_payment">Down Payment</string>
    <string name="loan_period">Loan Period (year)</string>
    <string name="interest_rate">Interest Rate (%)</string>
    <string name="loan">Car Loan :</string>
    <string name="interest">Interest :</string>
    <string name="monthly_repayment">Monthly Repayment :</string>
    <string name="calculate">Calculate</string>
    <string name="reset">Reset</string>
    <string name="error_input">Input required</string>




</resources>
